tests/expected/recovery/expressions/003_member_missing_property.txt
{
  "type": "Program",
  "start": 0,
  "end": 99,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 44,
      "end": 68,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 50,
          "end": 67,
          "id": {
            "type": "Identifier",
            "start": 50,
            "end": 56,
            "name": "broken"          },
          "init": null        }
      ]    },
    {
      "type": "VariableDeclaration",
      "start": 69,
      "end": 98,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 75,
          "end": 97,
          "id": {
            "type": "Identifier",
            "start": 75,
            "end": 93,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 96,
            "end": 97,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 43,
      "value": " Member expression missing property name."
    }
  ],
  "errors": [
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected ']', got ';'",
      "line": 2,
      "column": 24,
      "offset": 67
    },
    {
      "code": "K2020",
      "severity": "error",
      "message": "Expected initializer expression after '='",
      "line": 2,
      "column": 24,
      "offset": 67
    },
    {
      "code": "K2070",
      "severity": "error",
      "message": "Missing initializer in 'const' declaration",
      "line": 3,
      "column": 1,
      "offset": 69
    }
  ]
}
error[K2002]: Expected ']', got ';'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/003_member_missing_property.js:2:24
   |
 2 | const broken = object[1;
   |                        ^
  = note: see TS1005

error[K2020]: Expected initializer expression after '='
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/003_member_missing_property.js:2:24
   |
 2 | const broken = object[1;
   |                        ^
  = note: see TS1109

error[K2070]: Missing initializer in 'const' declaration
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/003_member_missing_property.js:3:1
   |
 3 | const anchor_after_error = 1;
   | ^^^^^

--- Statistics ---
Arena: used=37760B reserved=16777216B ratio=0%
Parse errors: 3
